--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -9,10 +9,14 @@ runtime:
         - sodium
         - ctype
         - iconv
+        - pdo_pgsql
         
 
 build:
     flavor: none
+
+relationships:
+    database: "db:postgresql"
 
 web:
     locations:
